test/scc/type/semantic-errors/006.t
union
{
    int a;
    int b[];
};